docs(pages): align docs baseurl with kcal-cli project site

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 title: kcal-cli Docs
 description: Documentation for the kcal local-first nutrition CLI
-baseurl: "/kcal"
+baseurl: "/kcal-cli"
 url: "https://saadjs.github.io"
 theme: minima
 markdown: kramdown
