--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,16 @@ jobs:
           output="dist/kcal-${GOOS}-${GOARCH}${suffix}"
           CGO_ENABLED=0 go build -trimpath -ldflags='-s -w' -o "${output}" .
 
+      - name: Smoke test release binary (linux/amd64)
+        if: matrix.goos == 'linux' && matrix.goarch == 'amd64'
+        run: |
+          set -euo pipefail
+          bin="dist/kcal-linux-amd64"
+          chmod +x "${bin}"
+          "${bin}" --help | grep -q "saved-food"
+          "${bin}" saved-food --help | grep -q "Manage saved food templates"
+          "${bin}" saved-meal --help | grep -q "Manage saved meal templates"
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
