--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,12 +32,20 @@ jobs:
         env:
           GOOS: ${{ matrix.goos }}
           GOARCH: ${{ matrix.goarch }}
+          VERSION: ${{ github.ref_name }}
+          COMMIT: ${{ github.sha }}
         run: |
           mkdir -p dist
           suffix=""
           if [ "${GOOS}" = "windows" ]; then suffix=".exe"; fi
           output="dist/kcal-${GOOS}-${GOARCH}${suffix}"
-          CGO_ENABLED=0 go build -trimpath -ldflags='-s -w' -o "${output}" .
+          build_date="$(date -u +'%Y-%m-%dT%H:%M:%SZ')"
+          if [ -z "${VERSION}" ]; then VERSION="v1.1.0"; fi
+          ldflags="-s -w \
+            -X github.com/saad/kcal-cli/cmd/kcal.version=${VERSION} \
+            -X github.com/saad/kcal-cli/cmd/kcal.commit=${COMMIT} \
+            -X github.com/saad/kcal-cli/cmd/kcal.date=${build_date}"
+          CGO_ENABLED=0 go build -trimpath -ldflags "${ldflags}" -o "${output}" .
 
       - name: Smoke test release binary (linux/amd64)
         if: matrix.goos == 'linux' && matrix.goarch == 'amd64'
